@@ -27,6 +27,7 @@ public enum ItemSet {
 	BW("Bastions of Will", Const.BASTIONS_OF_WILL, "focus", false, 2),
 	LoN("Legacy of Nightmares", Const.LON, "the-wailing-host", false, 2),
 	EndlessWalk("Endless Walk", Const.ENDLESS_WALK, "the-travelers-pledge", false, 2),
+	Danettas("Danetta's Hatred", Const.DANETTAS, "danettas-spite", false, 2),
 	Marauders("Embodiment of the Marauder", Const.MARAUDERS, "marauders-visage", false, 6),
 	UE("Unhallowed Essence", Const.UE, "accursed-visage", false, 6),
 	Nats("Natalya's Vengeance", Const.NATS, "natalyas-slayer", false, 7),
