@@ -1,5 +1,9 @@
 Change Log:
 
+**1/11/17**
+- Added Danetta's Spite Set Bonus (Vault costs 8 hatred)
+- When equipped with Danetta's Spite and Action Shot rune is selected for Vault and Focus+Restraint equipped, Vault will be used to keep the spender buff up
+
 **1/6/17**
 - Hellcat damage bonus no longer applies to Sentries
 - Hellcat damage adjusted by proc coefficient. Note: currently it is believed that Hellcat has an universal Proc Coefficient of 50%, regardless of skill. This is currently implemented in the calculator as "all or nothing" (i.e. you either get 0 bounces, or 3-5 bounces, based on the belt's legendary power value).
